# valueobj

./: .gitignore  .travis.yml  Makefile.am  README.md  appveyor.yml  circle.yml  configure.ac  package.json  valueobj.pro  version.m4
tests/: Makefile.am  igloo-array.cpp  igloo-handle.cpp  igloo-listener.cpp  igloo-listener.h  igloo-object.cpp  tests.pro
